@@ -2,7 +2,7 @@
 #
 #     Copyright (C) 2000-2006 Marc de Courville <marc@courville.org>
 #     Copyright (C) 2009      "Alexandra N. Kossovsky" <sasha@oktetlabs.ru>
-#     Copyright (C) 2005-2014 Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2005-2016 Roland Rosenfeld <roland@spinnaker.de>
 #
 #     $Id$
 #
@@ -233,10 +233,10 @@ foreach my $askfor ( @ARGV ) {
     foreach my $answer (split / /, $ldap_expected_answers) {
       my $result = '';
 # if this is email we take all the values
-      if( $ldap_result_email =~ /\${$answer}/ ) {
+      if( $ldap_result_email =~ /\$\{$answer}/ ) {
         foreach my $result ($entry->get_value($answer)) {
           my $email = $ldap_result_email;
-          $email =~ s/\${$answer}/$result/g;
+          $email =~ s/\$\{$answer}/$result/g;
           push @emails, $email;
         }
       } 
@@ -245,8 +245,8 @@ foreach my $askfor ( @ARGV ) {
 # if there is no answer must return the null otherwise we get an uninitialized variable error
         ($result = $entry->get_value($answer)) || ($result = '');
 # replace the containers with the results of the query
-        $realname =~ s/\${$answer}/$result/g;
-        $comment =~ s/\${$answer}/$result/g;
+        $realname =~ s/\$\{$answer}/$result/g;
+        $comment =~ s/\$\{$answer}/$result/g;
       }
     }
     foreach my $ema (@emails)  {
